# cuda-quickstart

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  cuda-project-review.md  plan.md
.github/workflows/: ci.yml
common/: cuda_check.h  cuda_cublas.h  cuda_cudnn.h  cuda_cufft.h  cuda_demos.cuh  cuda_helper.h  cuda_raii.h  cuda_utils.h
cuda-cmake/: CMakeLists.txt
cuda-cmake/scripts/: configure_build_run.ps1  configure_build_run.sh
cuda-cmake/src/: main.cu
cuda-cmake/tests/: CMakeLists.txt
scripts/common/: VsHelper.psm1  cuda_common.sh
scripts/global/: enable_cuda_env.ps1  install_cuda_env_persistent.ps1  install_ecuda_alias.ps1  remove_cuda_env_persistent.ps1
single-nvcc/: main.cu
single-nvcc/scripts/: build_and_run.ps1  build_and_run.sh
